fix: gap value

--- a/css/index.css
+++ b/css/index.css
@@ -55,7 +55,6 @@ body {
     flex-direction: column;
     align-items: center;
     margin-top: 40px;
-    gap: px;
     color:#222222;
 }
 
